--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+cli-clipboard = "0.4.0"
 image = "0.24.6"
 wry = {version="0.24.3",features=["tray"]}
