--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,4 @@ edition = "2021"
 
 [dependencies]
 cli-clipboard = "0.4.0"
-image = "0.24.6"
-wry = {version="0.24.3",features=["tray"]}
+wry = "0.24.3"
