--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ license = "MIT"
 authors = ["Shreyas Shriyan <shreyshriyan@gmail.com>"]
 
 [dependencies]
-gtk = "0.15.1"
 url = "2.4.0"
 wry = "0.24.3"
+
+[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
+gtk = "0.15.1"
