--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ wry = "0.24.3"
 
 [target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
 gtk = "0.15.1"
+
+[package.metadata.bundle]
+identifier = "work.shreyas.mediumreader"
